# OpenCV-ImageRotation

./: CMakeLists.txt  README.md  main.cpp
